# TCCSEngine

./: CMakeLists.txt  README.md
assets/: christmas-tree.TCCS_model  example.TCCS_model
src/: main.c  tccsengine.h  tccsgraphics.c  tccsgraphics.h  tccsmath.c  tccsmath.h
